--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Nguyên thêm code nè!</h1>
+    <h1>Bich thêm code nè!</h1>
 
 </body>
 </html>
